--- a/src/qt/forms/debugwindow.ui
+++ b/src/qt/forms/debugwindow.ui
@@ -916,7 +916,7 @@
                 <height>0</height>
                </size>
               </property>
-              <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,1">
+              <layout class="QGridLayout" name="gridLayout_2" columnminimumwidth="0,10,0">
                <item row="0" column="0">
            <widget class="QLabel" name="label_50">
             <property name="text">
